--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -19212,5 +19212,23 @@
         <target>¡Es imposible hacer esto en una zona controlada por los zombies!</target>
       </segment>
     </unit>
+    <unit id="oZCdnHO" name="Das wird aber nicht lange so bleiben...">
+      <notes>
+        <note category="german">Das wird aber nicht lange so bleiben...</note>
+      </notes>
+      <segment>
+        <source>Das wird aber nicht lange so bleiben...</source>
+        <target>Das wird aber nicht lange so bleiben...</target>
+      </segment>
+    </unit>
+    <unit id="34pYaEI" name="Das macht dann... %day% Tage">
+      <notes>
+        <note category="german">Das macht dann... %day% Tage</note>
+      </notes>
+      <segment>
+        <source>Das macht dann... %day% Tage</source>
+        <target>Das macht dann... %day% Tage</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
