--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -19247,5 +19247,23 @@
         <target>Impossible de faire cela dans une zone sous contrôle des zombies !</target>
       </segment>
     </unit>
+    <unit id="oZCdnHO" name="Das wird aber nicht lange so bleiben...">
+      <notes>
+        <note category="german">Das wird aber nicht lange so bleiben...</note>
+      </notes>
+      <segment>
+        <source>Das wird aber nicht lange so bleiben...</source>
+        <target>Mais ça ne va sûrement pas durer...</target>
+      </segment>
+    </unit>
+    <unit id="34pYaEI" name="Das macht dann... %day% Tage">
+      <notes>
+        <note category="german">Das macht dann... %day% Tage</note>
+      </notes>
+      <segment>
+        <source>Das macht dann... %day% Tage</source>
+        <target>Et oui... %day% jours</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
